# duckdb

./: CMakeLists.txt  Makefile  README.md
data/json/: simple_policy2.json
examples/embedded-c++/: .gdb_history  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  example  main.cpp
extension/parquet/: parquet_extension.cpp  parquet_metadata.cpp  parquet_reader.cpp
extension/parquet/include/: parquet_reader.hpp
src/: CMakeLists.txt
src/common/: exception.cpp
src/common/row_operations/: row_aggregate.cpp
src/common/types/: batched_data_collection.cpp  data_chunk.cpp  selection_vector.cpp  vector.cpp
src/common/types/column/: column_data_collection.cpp
src/common/types/row/: tuple_data_scatter_gather.cpp
src/execution/: expression_executor.cpp  join_hashtable.cpp  perfect_aggregate_hashtable.cpp  physical_operator.cpp  physical_plan_generator.cpp  radix_partitioned_hashtable.cpp
src/execution/expression_executor/: execute_function.cpp
src/execution/physical_plan/: plan_get.cpp
src/function/aggregate/: sorted_aggregate_function.cpp
src/function/table/: table_scan.cpp
src/include/: basic.pb.h  duckdb.h  expr_args.pb.h  picachv_interfaces.h  plan_args.pb.h  transform.pb.h
src/main/: client_context.cpp  connection.cpp  database.cpp  pending_query_result.cpp
src/messages/: CMakeLists.txt  basic.proto  expr_args.proto  transform.proto
src/parallel/: executor.cpp  executor_task.cpp  pipeline.cpp  pipeline_executor.cpp
src/planner/: expression.cpp
src/planner/expression/: bound_aggregate_expression.cpp  bound_cast_expression.cpp  bound_constant_expression.cpp  bound_function_expression.cpp  bound_reference_expression.cpp
src/storage/: data_table.cpp
src/storage/table/: row_group.cpp  scan_state.cpp
tools/sqlite3_api_wrapper/: CMakeLists.txt
(+49 files in other folders)
